Settings: Implement Motion sense
* exclusive to pixel 4 series
  reverse engineered from SettingsGoogle 14 QPR1 and ported for QPR2

Change-Id: I8b876e4dac63aa5ae21c1ffb5fcff88e2b77026b
Signed-off-by: aswin7469 <aswinas@pixysos.com>

--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -38,6 +38,37 @@
         <intent android:action="org.lineageos.settings.device.GESTURE_SETTINGS" />
     </lineageos.preference.RemotePreference>
 
+<PreferenceCategory 
+    android:title="@string/aware_category_gesture" 
+    android:key="aware_gestures" 
+    settings:controller="com.google.android.settings.aware.AwareGesturesCategoryPreferenceController" 
+    settings:keywords="TYPE_DYNAMIC_REFERENCE">
+
+    <com.google.android.settings.aware.TapGestureDialogPreference 
+        android:title="@string/gesture_tap_title" 
+        android:key="gesture_tap_summary" 
+        settings:controller="com.google.android.settings.aware.TapDialogGesturePreferenceController" 
+        settings:searchable="false" />
+
+    <com.google.android.settings.aware.SkipGestureDialogPreference 
+        android:title="@string/gesture_skip_title"
+        android:key="gesture_skip_summary" 
+        settings:controller="com.google.android.settings.aware.SkipDialogGesturePreferenceController" 
+        settings:searchable="false" />
+
+    <com.google.android.settings.aware.SilenceGestureDialogPreference 
+        android:title="@string/gesture_silence_title" 
+        android:key="gesture_silence_summary" 
+        settings:controller="com.google.android.settings.aware.SilenceDialogGesturePreferenceController" 
+        settings:searchable="false" />
+</PreferenceCategory>
+
+
+<PreferenceCategory 
+    android:title="@string/other_gestures_category_title" 
+    android:key="other_gestures" 
+    settings:controller="com.google.android.settings.aware.AwareGesturesCategoryPreferenceController" />
+
     <Preference
         android:key="gesture_swipe_down_fingerprint_input_summary"
         android:title="@string/fingerprint_swipe_for_notifications_title"
