--- a/res/xml/system_dashboard_fragment.xml
+++ b/res/xml/system_dashboard_fragment.xml
@@ -42,6 +42,14 @@
         android:fragment="com.android.settings.language.LanguageSettings"
         settings:controller="com.android.settings.language.LanguagePreferenceController"/>
 
+    <com.google.android.settings.aware.AwareSettingsDialogPreference 
+	android:icon="@drawable/ic_aware" 
+        android:key="aware_settings"
+	android:order="-230" 
+	android:title="@string/aware_settings_title" 
+        settings:controller="com.google.android.settings.aware.AwareSettingsPreferenceController"
+        settings:searchable="false" />
+
     <Preference
         android:key="Keyboard_settings"
         android:title="@string/keyboard_settings"
